# qingdai2

./: .gitignore  AGENTS.en.md  AGENTS.zhs.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test.sh
docs/: 01-astronomical-setting.md  02-orbital-dynamics.md  03-climate-model.md  04-runtime-config.md  05-surface-topography-and-albedo.md  06-energy-framework.md  07-ocean-and-sea-ice.md  08-humidity-and-clouds.md  09-hydrology-closure.md  10-numerics-and-stability.md  11-spin-up-and-restarts.md  12-code-architecture-and-apis.md  13-plant-model.md  14-adaptive-spectroscopy.md  15-ecology-framework.md  16-phytoplankton-model.md  17-gaias-architect.md  18-orography-lapse-and-snowpack.md  19-dba-best-practices.md
projects/: 001-genesis.md  002-physics-core.md  003-cloud-precipitation-albedo.md  004-topography-generation.md  005-topography-integration-into-gcm.md  006-energy-budget.md  007-slab-ocean.md  008-humidity.md  009-planetary-hydrology.md  010-better-dynamics.md  011-ocean-model.md  012-polar-treatment.md  013-spin-up.md  014-surface-hydrology.md  015-adaptative-spectral-biogeography.md  016-jax-acceleration.md  017-phytoplankton-and-ocean-color.md  018-plant-v2.md  019-orography-lapse-and-snowpack.md  020-oo-refactor.md  021-double-buffering.md  p021-m4-results.json
pygcm/: constants.py  dynamics.py  energy.py  forcing.py  grid.py  humidity.py  hydrology.py  jax_compat.py  ocean.py  orbital.py  physics.py  ploter.py  routing.py  topography.py
scripts/: __init__.py  analyze_topography.py  benchmark_double_buffering.py  benchmark_jax.py  diag_isr.py  generate_hydrology_maps.py  generate_orbit_plots.py  generate_topography.py  p021_m4_regression_and_benchmark.py  plot_ecology_point.py  plot_topography.py  run_simulation.py  smoke_genes_export.py  test_ecology_autosave.py  test_ecology_m1_m2.py  test_ecology_m3.py  test_ecology_m3_plus.py  test_orbital_module.py  (+2 more)
(+47 files in other folders)
